--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
 </head>
 <body>
-	
+	<h1>{Helo my syte}</h1>
+	<h2>{Lets go}</h2>
 </body>
 </html>
